force-app/main/default/objects/Farm_Task__c/Farm_Task__c.object-meta.xml
<CustomObject>
    <description>Represents various tasks and maintenance activities on the farm.</description>
    <label>Farm Task</label>
    <nameField>
        <displayFormat>TSK-{00000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farm Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>