force-app/main/default/objects/Farm_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Farm Tasks</relationshipLabel>
    <relationshipName>AssignedFarmTasks</relationshipName>
    <type>Lookup</type>
</CustomField>