force-app/main/default/objects/Farm_Task__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>The date on which the task was actually completed.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>