force-app/main/default/objects/Farm_Task__c/fields/Crop_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Crop_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crop cycle associated with this task.</description>
    <label>Crop Cycle</label>
    <referenceTo>Crop_Cycle__c</referenceTo>
    <relationshipLabel>Farm Tasks</relationshipLabel>
    <relationshipName>Farm_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>