force-app/main/default/objects/Farm_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date by which the task should be completed.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>