force-app/main/default/objects/Farm_Task__c/fields/Farm_Bed__c.field-meta.xml
<CustomField>
    <fullName>Farm_Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The farm bed associated with this task.</description>
    <label>Farm Bed</label>
    <referenceTo>Farm_Bed__c</referenceTo>
    <relationshipLabel>Farm Tasks</relationshipLabel>
    <relationshipName>Farm_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>