force-app/main/default/objects/Farm_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planting</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Watering</fullName>
            </value>
            <value>
                <fullName>Fertilization</fullName>
            </value>
            <value>
                <fullName>Pruning</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Weeding</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Soil Testing</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>