force-app/main/default/objects/Farm_Task__c/validationRules/Due_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Not Started&quot;), Due_Date__c &lt; TODAY() )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Cannot set due date in the past for a new task.</errorMessage>
</ValidationRule>