force-app/main/default/objects/Farm_Task__c/listViews/High_Priority.listView-meta.xml
<ListView>
    <fullName>High_Priority</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <label>High Priority</label>
</ListView>