force-app/main/default/objects/Farm_Task__c/listViews/My_Tasks_Today.listView-meta.xml
<ListView>
    <fullName>My_Tasks_Today</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Tasks Today</label>
</ListView>