force-app/main/default/objects/Farm_Task__c/listViews/Overdue_Tasks.listView-meta.xml
<ListView>
    <fullName>Overdue_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Task_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <label>Overdue Tasks</label>
</ListView>